{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 3416,
  "lineage": "2215704e-8cac-fbfb-c0ee-18bf07c138fa",
  "resources": [
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-0237d7386c7d5d427",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0237d7386c7d5d427",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aed1befe177056e4",
            "private_dns": "ip-192-168-1-6.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.6",
            "public_dns": "ec2-54-255-164-158.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.164.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ab2a278e483768f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d71ea912c9b81c8",
            "tags": {
              "Name": "Bastion Host"
            },
            "tags_all": {
              "Name": "Bastion Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3edc58b5d15688f"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083c22c8eb1ae5609",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:elastic-ip/eipalloc-083c22c8eb1ae5609",
            "association_id": "eipassoc-012e83e4d77e1a9e7",
            "domain": "vpc",
            "id": "eipalloc-083c22c8eb1ae5609",
            "instance": "i-0d5660d14db233c14",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0ac409aad430eab00",
            "private_dns": "ip-192-168-1-61.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.61",
            "public_dns": "ec2-52-77-35-11.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.35.11",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.jenkins_server.aws_instance.ec2",
            "module.security_groups.aws_security_group.sg_jenkins",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-0d5660d14db233c14",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d5660d14db233c14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac409aad430eab00",
            "private_dns": "ip-192-168-1-61.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.61",
            "public_dns": "ec2-52-77-35-11.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.35.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01898d0c494bb26d1",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d71ea912c9b81c8",
            "tags": {
              "Name": "Jenkins Server"
            },
            "tags_all": {
              "Name": "Jenkins Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ce68750738a51d9"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.sg_jenkins",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_groups_attachment",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ip_attachments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "192.168.1.111",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a-20250610122836440500000002",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "target_id": "192.168.1.111"
          },
          "dependencies": [
            "module.target_group_http.aws_lb_target_group.nlb_tg",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": "192.168.1.112",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a-20250610122210672800000008",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "target_id": "192.168.1.112"
          },
          "dependencies": [
            "module.target_group_http.aws_lb_target_group.nlb_tg",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        },
        {
          "index_key": "192.168.1.113",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a-20250610122836366400000001",
            "port": 30080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "target_id": "192.168.1.113"
          },
          "dependencies": [
            "module.target_group_http.aws_lb_target_group.nlb_tg",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master_node_01",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-0a4557afeac57020d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMRole_InstanceProfile",
            "id": "i-0a4557afeac57020d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0784b94f77e52415d",
            "private_dns": "ip-192-168-1-111.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1f4e85595612a3b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e34ea1650bcaef9",
            "tags": {
              "Name": "Master Node 01"
            },
            "tags_all": {
              "Name": "Master Node 01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01272d6ec198ef04c"
            ]
          },
          "dependencies": [
            "module.iam_instance_profile.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam_role.aws_iam_role.ec2_ssm_role",
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master_node_02",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-09e54e687235ae9ee",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMRole_InstanceProfile",
            "id": "i-09e54e687235ae9ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3d80f22570037b7",
            "private_dns": "ip-192-168-1-112.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07fa637d27779a04b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e34ea1650bcaef9",
            "tags": {
              "Name": "Master Node 02"
            },
            "tags_all": {
              "Name": "Master Node 02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01272d6ec198ef04c"
            ]
          },
          "dependencies": [
            "module.iam_instance_profile.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam_role.aws_iam_role.ec2_ssm_role",
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master_node_03",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-070094778671386c6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMRole_InstanceProfile",
            "id": "i-070094778671386c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0701719f4a46b3ece",
            "private_dns": "ip-192-168-1-113.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04034b27fe00d3e69",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e34ea1650bcaef9",
            "tags": {
              "Name": "Master Node 03"
            },
            "tags_all": {
              "Name": "Master Node 03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01272d6ec198ef04c"
            ]
          },
          "dependencies": [
            "module.iam_instance_profile.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam_role.aws_iam_role.ec2_ssm_role",
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e330c276cddcb2aa",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:elastic-ip/eipalloc-0e330c276cddcb2aa",
            "association_id": "eipassoc-0aa6ce8de8cc77924",
            "domain": "vpc",
            "id": "eipalloc-0e330c276cddcb2aa",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-085262c1c96ad7f11",
            "private_dns": "ip-192-168-1-39.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.39",
            "public_dns": "ec2-13-213-219-189.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.219.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-01"
            },
            "tags_all": {
              "Name": "nat-eip-01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c71178f297353cc7",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:elastic-ip/eipalloc-0c71178f297353cc7",
            "association_id": "eipassoc-0bca03cfcf8c704b9",
            "domain": "vpc",
            "id": "eipalloc-0c71178f297353cc7",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-09bc519a55eaef0db",
            "private_dns": "ip-192-168-1-167.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.167",
            "public_dns": "ec2-52-220-165-11.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.165.11",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip-02"
            },
            "tags_all": {
              "Name": "nat-eip-02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e330c276cddcb2aa",
            "association_id": "eipassoc-0aa6ce8de8cc77924",
            "connectivity_type": "public",
            "id": "nat-0884162f4b6eb0020",
            "network_interface_id": "eni-085262c1c96ad7f11",
            "private_ip": "192.168.1.39",
            "public_ip": "13.213.219.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d71ea912c9b81c8"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_01",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c71178f297353cc7",
            "association_id": "eipassoc-0bca03cfcf8c704b9",
            "connectivity_type": "public",
            "id": "nat-0ddbddf610bb108f4",
            "network_interface_id": "eni-09bc519a55eaef0db",
            "private_ip": "192.168.1.167",
            "public_ip": "52.220.165.11",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df50073d7c4b6b02"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_02",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nfs_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-0bb63891b9fc28c2c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "nfs_data"
                },
                "tags_all": {
                  "Name": "nfs_data"
                },
                "throughput": 125,
                "volume_id": "vol-085fd9399733f8ea6",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb63891b9fc28c2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd9bddb0c257b777",
            "private_dns": "ip-192-168-1-120.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e05e8cd3502f95e6",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e34ea1650bcaef9",
            "tags": {
              "Name": "NFS Server"
            },
            "tags_all": {
              "Name": "NFS Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0954c6c1eeaa9d8a3"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:loadbalancer/net/NLB/596f30e32b4734dd",
            "arn_suffix": "net/NLB/596f30e32b4734dd",
            "dns_name": "NLB-596f30e32b4734dd.elb.ap-southeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:loadbalancer/net/NLB/596f30e32b4734dd",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02d71ea912c9b81c8"
              },
              {
                "subnet_id": "subnet-0df50073d7c4b6b02"
              }
            ],
            "subnets": [
              "subnet-02d71ea912c9b81c8",
              "subnet-0df50073d7c4b6b02"
            ],
            "tags": {
              "Name": "NLB"
            },
            "tags_all": {
              "Name": "NLB"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:listener/net/NLB/596f30e32b4734dd/39675201b1c52bbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:listener/net/NLB/596f30e32b4734dd/39675201b1c52bbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:loadbalancer/net/NLB/596f30e32b4734dd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.nlb",
            "module.target_group_http.aws_lb_target_group.nlb_tg",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rancher_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3cdd86f9d4c09b6",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:elastic-ip/eipalloc-0f3cdd86f9d4c09b6",
            "association_id": "eipassoc-07b623859f14d86fc",
            "domain": "vpc",
            "id": "eipalloc-0f3cdd86f9d4c09b6",
            "instance": "i-0cd514e7008999505",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-019b6a944b7e3cf76",
            "private_dns": "ip-192-168-1-44.ap-southeast-1.compute.internal",
            "private_ip": "192.168.1.44",
            "public_dns": "ec2-18-139-53-188.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.53.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.rancher_server.aws_instance.ec2",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rancher_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01938df366ac2d954",
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:instance/i-0cd514e7008999505",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "rancher_data"
                },
                "tags_all": {
                  "Name": "rancher_data"
                },
                "throughput": 125,
                "volume_id": "vol-036b715c61bb51725",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd514e7008999505",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "harinemkey-singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-019b6a944b7e3cf76",
            "private_dns": "ip-192-168-1-44.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.44",
            "public_dns": "ec2-18-139-53-188.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.53.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f575893ff36a93ef",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d71ea912c9b81c8",
            "tags": {
              "Name": "Rancher Server"
            },
            "tags_all": {
              "Name": "Rancher Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086ae1c2706a8ebde"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:route-table/rtb-0b34d420a092052c6",
            "id": "rtb-0b34d420a092052c6",
            "owner_id": "381492082627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0884162f4b6eb0020",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_01",
            "module.nat_gateway.aws_eip.nat_02",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-01",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-02",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:route-table/rtb-04251a2def5602fa5",
            "id": "rtb-04251a2def5602fa5",
            "owner_id": "381492082627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddbddf610bb108f4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_01",
            "module.nat_gateway.aws_eip.nat_02",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-01",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-02",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:route-table/rtb-0caa8163bcef39433",
            "id": "rtb-0caa8163bcef39433",
            "owner_id": "381492082627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9c07c3b3fab2c2a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88624bd1a3273ec",
            "route_table_id": "rtb-0b34d420a092052c6",
            "subnet_id": "subnet-07e34ea1650bcaef9"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_01",
            "module.nat_gateway.aws_eip.nat_02",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-01",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-02",
            "module.route_tables.aws_route_table.private_rt_01",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8fde52dc1bceaa4",
            "route_table_id": "rtb-04251a2def5602fa5",
            "subnet_id": "subnet-0f41f08370593780c"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_01",
            "module.nat_gateway.aws_eip.nat_02",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-01",
            "module.nat_gateway.aws_nat_gateway.nat_gateway-02",
            "module.route_tables.aws_route_table.private_rt_02",
            "module.vpc.aws_subnet.private_subnet_01",
            "module.vpc.aws_subnet.private_subnet_02",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a6f74ff6af1c397",
            "route_table_id": "rtb-0caa8163bcef39433",
            "subnet_id": "subnet-02d71ea912c9b81c8"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc8f0a4f072e1462",
            "route_table_id": "rtb-0caa8163bcef39433",
            "subnet_id": "subnet-0df50073d7c4b6b02"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:security-group/sg-01272d6ec198ef04c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01272d6ec198ef04c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NodePort port range",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "Allow internal traffic for Kubernetes cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow Calico BGP Port",
                "from_port": 179,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae1c2706a8ebde"
                ],
                "self": false,
                "to_port": 179
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Public EC2 Instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae1c2706a8ebde",
                  "sg-0e3edc58b5d15688f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Node driver Docker daemon TLS port etcd client requests etcd peer communication",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae1c2706a8ebde"
                ],
                "self": false,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "Rancher webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae1c2706a8ebde"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "terraform-2025061012221108870000000a",
            "name_prefix": "terraform-",
            "owner_id": "381492082627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC for K8S-private-ec2-sg"
            },
            "tags_all": {
              "Name": "VPC for K8S-private-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:security-group/sg-0e3edc58b5d15688f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3edc58b5d15688f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP requests",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS requests",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from ALL IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250610122208333200000004",
            "name_prefix": "terraform-",
            "owner_id": "381492082627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC for K8S-public-ec2-sg"
            },
            "tags_all": {
              "Name": "VPC for K8S-public-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:security-group/sg-08ce68750738a51d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ce68750738a51d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP requests",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS requests",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250610122208333800000005",
            "name_prefix": "terraform-",
            "owner_id": "381492082627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC for K8S-jenkins-server-sg"
            },
            "tags_all": {
              "Name": "VPC for K8S-jenkins-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:security-group/sg-0954c6c1eeaa9d8a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0954c6c1eeaa9d8a3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH for instance in public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3edc58b5d15688f"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250610122211074900000009",
            "name_prefix": "terraform-",
            "owner_id": "381492082627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC for K8S-nfs-server-sg"
            },
            "tags_all": {
              "Name": "VPC for K8S-nfs-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rancher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:security-group/sg-086ae1c2706a8ebde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086ae1c2706a8ebde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP requests",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS requests",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from ALL IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubelet",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6444
              }
            ],
            "name": "terraform-20250610122208338700000006",
            "name_prefix": "terraform-",
            "owner_id": "381492082627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC for K8S-rancher-server-sg"
            },
            "tags_all": {
              "Name": "VPC for K8S-rancher-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_private_to_sg_nfs_2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow NFS access from private_sg",
            "from_port": 2049,
            "id": "sgrule-2049774982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0954c6c1eeaa9d8a3",
            "security_group_rule_id": "sgr-0911c529f81bab9c2",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_private_to_sg_nfs_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow RPC  (TCP) access from private_sg",
            "from_port": 111,
            "id": "sgrule-1569766620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0954c6c1eeaa9d8a3",
            "security_group_rule_id": "sgr-0bc92b7da4a165714",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 111,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_private_to_sg_nfs_rpc_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow RPC (UDP) access from private_sg",
            "from_port": 111,
            "id": "sgrule-103866571",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0954c6c1eeaa9d8a3",
            "security_group_rule_id": "sgr-078e23fc497dd64b5",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 111,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Communication with all nodes API",
            "from_port": 10250,
            "id": "sgrule-1400805577",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-09c5a62bfdfa9a882",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 10254,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "api_rancher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Metrics server communication with all nodes API",
            "from_port": 10250,
            "id": "sgrule-1383827606",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-0c22c7e6e0faebf94",
            "self": false,
            "source_security_group_id": "sg-086ae1c2706a8ebde",
            "timeouts": null,
            "to_port": 10254,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Kubernetes ETCD",
            "from_port": 2379,
            "id": "sgrule-773682602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-03451487263ca2117",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Kubernetes API Server Access (port 6443)",
            "from_port": 6443,
            "id": "sgrule-1213057272",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-011bec799dd99167b",
            "self": false,
            "source_security_group_id": "sg-01272d6ec198ef04c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "k8s_api_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Kubernetes API Server Access (port 6443) for public subnet",
            "from_port": 6443,
            "id": "sgrule-836391548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-0476bee051b0df1c1",
            "self": false,
            "source_security_group_id": "sg-0e3edc58b5d15688f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs_to_private_nfsd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow NFSD from NFS SG to private EC2",
            "from_port": 2049,
            "id": "sgrule-754935972",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-035232c7333113a44",
            "self": false,
            "source_security_group_id": "sg-0954c6c1eeaa9d8a3",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs_to_private_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow RPC (TCP) from NFS SG to private EC2",
            "from_port": 111,
            "id": "sgrule-601929879",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-07c0178cbfd39a21e",
            "self": false,
            "source_security_group_id": "sg-0954c6c1eeaa9d8a3",
            "timeouts": null,
            "to_port": 111,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nfs_to_private_rpc_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow RPC (UDP) from NFS SG to private EC2",
            "from_port": 111,
            "id": "sgrule-2017518728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01272d6ec198ef04c",
            "security_group_rule_id": "sgr-0cbda1bd966b14ed6",
            "self": false,
            "source_security_group_id": "sg-0954c6c1eeaa9d8a3",
            "timeouts": null,
            "to_port": 111,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.security_groups.aws_security_group.public_sg",
            "module.security_groups.aws_security_group.sg_nfs",
            "module.security_groups.aws_security_group.sg_rancher",
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_http",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "arn_suffix": "targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "30080",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:targetgroup/Target-Group-HTTP/a52a2b2e123a119a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:381492082627:loadbalancer/net/NLB/596f30e32b4734dd"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Target-Group-HTTP",
            "port": 30080,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:internet-gateway/igw-0a9c07c3b3fab2c2a",
            "id": "igw-0a9c07c3b3fab2c2a",
            "owner_id": "381492082627",
            "tags": {
              "Name": "VPC for K8S-IGW"
            },
            "tags_all": {
              "Name": "VPC for K8S-IGW"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:subnet/subnet-07e34ea1650bcaef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e34ea1650bcaef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492082627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC for K8S-private-subnet-01"
            },
            "tags_all": {
              "Name": "VPC for K8S-private-subnet-01"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:subnet/subnet-0f41f08370593780c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f41f08370593780c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492082627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC for K8S-private-subnet-02"
            },
            "tags_all": {
              "Name": "VPC for K8S-private-subnet-02"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:subnet/subnet-02d71ea912c9b81c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d71ea912c9b81c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492082627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC for K8S-public-subnet-01"
            },
            "tags_all": {
              "Name": "VPC for K8S-public-subnet-01"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:subnet/subnet-0df50073d7c4b6b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df50073d7c4b6b02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492082627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC for K8S-public-subnet-02"
            },
            "tags_all": {
              "Name": "VPC for K8S-public-subnet-02"
            },
            "vpc_id": "vpc-0bcc483b634eb8d56"
          },
          "dependencies": [
            "module.vpc.aws_vpc.k8s_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:381492082627:vpc/vpc-0bcc483b634eb8d56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-0a50e811b35e7407b",
            "default_route_table_id": "rtb-0678581e8af661a9a",
            "default_security_group_id": "sg-034e2e32af6bf5172",
            "dhcp_options_id": "dopt-060ec92e5e9fcf288",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bcc483b634eb8d56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0678581e8af661a9a",
            "owner_id": "381492082627",
            "tags": {
              "Name": "VPC for K8S"
            },
            "tags_all": {
              "Name": "VPC for K8S"
            }
          }
        }
      ]
    }
  ]
}